@@ -1,4 +1,4 @@
 DIST wagon-http-1.0.tar.bz2 11701 RMD160 e6ae919550957dc8758ed745c57e96a14a979928 SHA1 7ea5de94611623b40f9a026e21e866d0cfe21486 SHA256 94909e46dd76ea5ab67663ccc88e31dbdb8819cbe9d799a075874b4cf268e976
-EBUILD wagon-http-1.0.ebuild 1030 RMD160 821b6d482b2790dd3c92e91769aa2d033313404c SHA1 b30d0773000d8a8b41ca6608b181562b057d1031 SHA256 8222df8a3cc8c1a971abbed5d51fae23ed02060da61f7dcbf991869d4935e4ae
-MISC ChangeLog 317 RMD160 0d84dcdebe03edaaa941c7a470868ec35473ba97 SHA1 51e5ba5cb9e70e879a3adb656b0dcf1161f67e47 SHA256 628e3459857e8e88c92633f8378fb7e6665685c7166619aea016e7ec9433099e
+EBUILD wagon-http-1.0.ebuild 1055 RMD160 b54fefc671adb15991a53e4374a1ef8567aa890d SHA1 242af7fb286b829f13348b34d02c5e8f50cd0dfe SHA256 1e2adde3f3d510ee19d5492dae7a1f4897da2b390eba707a360a86a56a597e03
+MISC ChangeLog 418 RMD160 2571e6c3305010c03a3b7ee877ce7178f1d74984 SHA1 81656ba59d6a4cfa9fd7e39c15faa6aa74c05a55 SHA256 b5dc72c2f89ef1f4f5216a9f078ee0a5f28c7f174a3bba8092bab71f55cd5928
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
